--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,11 @@ urllib3==1.25.9
 Werkzeug==1.0.1
 wincertstore==0.2
 gunicorn
+numpy
+pandas
+scikit-learn
+tensorflow
+keras
+matplotlib
+seaborn
+
